[package]
name = "dinotree"
version = "0.3.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "An aabb space partitioning 2d tree data structure"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/dinotree"
keywords = ["tree", "kdtree","dinotree","space-partitioning"]
readme = "readme.md"
edition = "2018"

[dependencies]
is_sorted = "0.1.1"
rayon = "1.0.3"
pdqselect = "0.1.0"
compt = "1.5.6"
axgeom = "1.0.5"
itertools = "0.7.8"
reorder ="1.0.2"

[dev-dependencies]
rustc-test = "0.3.0"
dinotree_sample="0.1.0"

[features]
#unstable =[]