[package]
name = "dinotree"
version = "0.5.5"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "An aabb space partitioning 2d tree data structure"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/dinotree"
keywords = []
readme = "readme.md"
edition = "2018"

[dependencies]

